<?xml version="1.0" encoding="UTF-8"?>

<!-- Resources on the web: -->
<!-- http://wiki.eclipse.org/Tycho/Packaging_Types -->
<!-- http://wiki.eclipse.org/Tycho/Reference_Card -->
<!-- http://wiki.eclipse.org/Category:Tycho -->
<!-- http://wiki.eclipse.org/Minerva -->
<!-- http://intellectualcramps.wordpress.com/2011/06/04/tycho-surefire-test-setup-tips/ -->
<!-- http://maksim.sorokin.dk/it/2010/12/21/tests-in-tycho/ -->
<!-- http://www.jug.ch/events/slides/111020_Tycho-Maven-Eclipse-RCP.pdf -->
<!-- http://git.eclipse.org/c/tycho/org.eclipse.tycho.git/tree/tycho-demo -->
<!-- http://timezra.blogspot.com/2010/05/tycho-tests-without-osgi.html -->
<!-- http://www.java-forum.org/deployment/116917-tycho-unit-tests.html -->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.recommenders</groupId>
	<artifactId>org.eclipse.recommenders.parent</artifactId>
	<version>0.4.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho-version>0.13.0</tycho-version>
		<jacoco-version>0.5.4.201111111111</jacoco-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<build-alias>b000</build-alias>
	</properties>

	<!-- special profiles for testing on mac and "all other" platforms -->
	<profiles>
		<profile>
			<id>sun-jvm</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://java.sun.com/</value>
				</property>
			</activation>
			<properties>
				<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
			</properties>
		</profile>
		<profile>
			<id>osx</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://www.apple.com/</value>
				</property>
			</activation>
			<properties>
				<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -XstartOnFirstThread</tycho.test.jvmArgs>
			</properties>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.tycho</groupId>
							<artifactId>tycho-surefire-plugin</artifactId>
							<version>${tycho-version}</version>
							<configuration combine.children="append">
								<dependencies>
									<dependency>
										<artifactId>org.eclipse.jdt.launching.macosx</artifactId>
										<version>3.2.100</version>
										<type>eclipse-plugin</type>
									</dependency>
								</dependencies>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<modules>
		<module>etc/licenses</module>
		<module>etc/targets</module>
		<module>plugins</module>
		<module>tests</module>
		<module>features</module>
		<module>dist</module>
	</modules>


	<build>
		<!-- MB: Why do we need this here (and not in pluginManagement)? Because of the P2 repos? -->
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
			</plugin>
		</plugins>


		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho-version}</version>
					<!-- MB: why do we need extensions=true? -->
					<extensions>true</extensions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
				</plugin>
				<plugin>
					<!-- we build code recommenders using target platforms only. We have to keep the target platform aynway to work with 
						it inside Eclipse. This way, we have to ensure consistency. As a side effect, the build seems to speed up since the update 
						sites are not queried on every build. -->
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<target>
							<artifact>
								<groupId>org.eclipse.recommenders</groupId>
								<artifactId>targets</artifactId>
								<version>0.4.0-SNAPSHOT</version>
								<classifier>e36</classifier>
							</artifact>
						</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-source-plugin</artifactId>
					<version>${tycho-version}</version>
					<executions>
						<execution>
							<id>attach-source</id>
							<phase>process-classes</phase>
							<goals>
								<goal>plugin-source</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<format>'v'yyyyMMdd-HHmm'-${build-alias}'</format>
						<archiveSite>false</archiveSite>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<argLine>${tycho.test.jvmArgs}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<!-- http://mdwhatever.free.fr/index.php/2011/09/quality-analysis-on-eclipse-plugins-with-tycho-sonar-jacoco-and-swtbot/ -->
					<!-- https://github.com/Godin/sonar-experiments/tree/master/jacoco-examples -->
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-version}</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>jacoco-site</id>
							<phase>site</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<includeAllDependencies>true</includeAllDependencies>
					</configuration>
				</plugin>

				<plugin>
					<groupId>com.mycila.maven-license-plugin</groupId>
					<artifactId>maven-license-plugin</artifactId>
					<version>1.9.0</version>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.recommenders</groupId>
							<artifactId>license-headers</artifactId>
							<version>0.4.0-SNAPSHOT</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<encoding>UTF-8</encoding>

						<header>license-tu-darmstadt-2011.txt</header>
						<validHeaders>
							<validHeader>license-frankenberger-2011.txt</validHeader>
							<validHeader>license-fritz-kaluza-2010.txt</validHeader>
							<validHeader>license-fritz-kaluza-2010.txt</validHeader>
							<validHeader>license-tu-darmstadt-2010.txt</validHeader>
							<validHeader>license-tu-darmstadt-2011.txt</validHeader>
							<validHeader>license-henss-2010.txt</validHeader>
							<validHeader>license-kutschke-2011.txt</validHeader>
							<validHeader>license-henss-2011.txt</validHeader>
							<validHeader>license-proksch-2011.txt</validHeader>
							<validHeader>license-google-wb.txt</validHeader>
						</validHeaders>
						<strictCheck>false</strictCheck>
						<quiet>false</quiet>
						<failIfMissing>true</failIfMissing>
						<includes>
							<include>src/**/*.java</include>
						</includes>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>1.0.1</version>
					<executions>
						<execution>
							<id>enforce-files-exist</id>
							<goals>
								<goal>enforce</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
